<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyPassBook</string>
    <string name="add">Add</string>
    <string name="add_salary">Add salary</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bus_or_auto">Bus/Auto</string>
    <string name="calendar">Calendar</string>
    <string name="clear_db">Clear DB</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="confirm_pin_mismatched">Confirm pin number mismatched</string>
    <string name="credit">Credit</string>
    <string name="daily_expense">Daily expense</string>
    <string name="date">Date</string>
    <string name="debit">Debit</string>
    <string name="delete">Delete</string>
    <string name="edit_daily_expense">Edit daily expense</string>
    <string name="edit_salary">Edit salary</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_confirm_pin_number">Enter confirm pin number</string>
    <string name="enter_food">Enter food</string>
    <string name="enter_others">Enter others</string>
    <string name="enter_particulars">Enter Particulars</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_pin_number">Enter pin number</string>
    <string name="enter_tea">Enter tea</string>
    <string name="enter_travel">Enter travel</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="food">Food</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="insufficient_funds_to_debit">Insufficient funds to debit</string>
    <string name="invalid_pin_number">Invalid pin number</string>
    <string name="login">Login</string>
    <string name="more">More</string>
    <string name="no_data_pdf">No data to pdf</string>
    <string name="others">Others</string>
    <string name="particulars">Particulars</string>
    <string name="pdf_success_description">PDF File saved Successfully</string>
    <string name="print">Print</string>
    <string name="s_no">No.</string>
    <string name="salary">Salary</string>
    <string name="edit_salary_description">Insufficient salary!</string>
    <string name="save">Save</string>
    <string name="select_any_one">Select anyone</string>
    <string name="select_debit_or_credit">Select debit or credit </string>
    <string name="tea">Tea</string>
    <string name="total">Total</string>
    <string name="travel">Travel</string>
</resources>
