<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/headerLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="9.5">

            <TextView
                android:id="@+id/headerSerialNo"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s_no" />

            <TextView
                android:id="@+id/headerDate"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/date" />

            <TextView
                android:id="@+id/headerParticulars"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:text="@string/particulars" />

            <TextView
                android:id="@+id/headerCredit"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/credit" />

            <TextView
                android:id="@+id/headerDebit"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/debit" />

            <TextView
                android:id="@+id/headerTotal"
                style="@style/HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/total" />
        </LinearLayout>

        <include layout="@layout/item_particulars" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
